src/test/ui/parser/pat-lt-bracket-5.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `[`
  --> $DIR/pat-lt-bracket-5.rs:2:10
   |
LL |     let v[0] = v[1];
   |          ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

